# calc-app

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  requirements.txt  start_pygame.sh  start_web.sh
apps/coord_convert/: app.py
core/game/: app_manager.py  cache.py  config.py  main.py  screen.py  session.py  splash.py
core/game/pages/: menu.py
core/game/ui/: widgets.py
core/web/: main.py
cpp/: main.cpp
cpp/core/: Options.hpp
cpp/include/terminus/: image.hpp  log.hpp  version.hpp
cpp/include/terminus/app/calc/core/: Options.hpp  Session.hpp
cpp/include/terminus/app/calc/drivers/: DriverAllegro.hpp  DriverBase.hpp  DriverRaylib.hpp
cpp/include/terminus/app/calc/image/: Frame.hpp  FrameView.hpp  Primitives.hpp
cpp/include/terminus/app/calc/log/: HandlerBase.hpp  HandlerConsole.hpp  Level.hpp  Logger.hpp
cpp/include/terminus/app/calc/pages/: Splash.hpp
cpp/include/terminus/app/calc/ui/: Label.hpp  LayoutBase.hpp  LayoutVertical.hpp  WidgetBase.hpp  WidgetLayoutItem.hpp
cpp/include/terminus/app/calc/utils/: StringUtilities.hpp
cpp/include/terminus/calc/apps/: App_Factory.hpp
cpp/include/terminus/calc/apps/calculator/: App_Calculator.hpp
cpp/include/terminus/calc/apps/coord_convert/: app.cpp  app.hpp
cpp/include/terminus/calc/apps/editor/: App_Editor.hpp
cpp/include/terminus/calc/apps/settings/: App_Settings.hpp
cpp/include/terminus/calc/core/: Options.hpp  Session.hpp
cpp/include/terminus/calc/drivers/: DriverBase.hpp  DriverRaylib.hpp
cpp/include/terminus/calc/image/: Frame.hpp  FrameView.hpp
cpp/include/terminus/calc/pages/: FooterWidget.hpp  HeaderWidget.hpp  Main_Menu.hpp  Main_Window.hpp  Splash.hpp
cpp/include/terminus/calc/ui/: Application.hpp  Label.hpp  LayoutBase.hpp  LayoutStack.hpp  LayoutVertical.hpp  WidgetBase.hpp  WidgetLayoutItem.hpp
cpp/include/terminus/calc/utils/: StringUtilities.hpp
cpp/include/terminus/core/: ConfigParser.hpp  Options.hpp  StringUtilities.hpp
cpp/include/terminus/driver/: DriverBase.hpp  DriverRaylib.hpp  Raylib_Utilities.hpp
cpp/include/terminus/drv/: Raylib_Utilities.hpp
cpp/include/terminus/gui/: I_Main_Window.hpp  I_Renderable.hpp  LayoutHorizontal.hpp  LayoutPrimitives.hpp  WidgetBase.hpp  WidgetLayout.hpp
cpp/include/terminus/gui/app/: App_Base.hpp
cpp/include/terminus/gui/core/: Application.hpp  Exit_Code.hpp  I_Main_Window.hpp  Resource_Manager.hpp  Session.hpp
cpp/include/terminus/gui/event/: EventType.hpp
cpp/include/terminus/gui/layout/: LayoutBase.hpp  LayoutHorizontal.hpp  LayoutPrimitives.hpp  LayoutStack.hpp  LayoutVertical.hpp  WidgetLayoutItem.hpp
cpp/include/terminus/gui/widget/: Label.hpp  WidgetBase.hpp  WidgetLayout.hpp
cpp/include/terminus/image/: Frame.hpp  FrameView.hpp  Frame_View.hpp  Pixels.hpp  Primitives.hpp
cpp/include/terminus/log/: HandlerBase.hpp  HandlerConsole.hpp  Level.hpp  Logger.hpp
cpp/include/terminus/math/: Fundamental_Types.hpp  Point.hpp  Point_Utilities.hpp  Rectangle.hpp  Size.hpp  Vector.hpp  VectorN.hpp  Vector_Base.hpp
cpp/include/terminus/math/types/: Compound_Types.hpp  Functors.hpp  Fundamental_Types.hpp
cpp/include/terminus/math/vector/: Indexing_Vector_Iterator.hpp  Vector.hpp  Vector_Base.hpp  Vector_Utilities.hpp
cpp/include/tmns/app/calc/ui/: Frame.hpp  (+5 more)
cpp/include/tmns/math/: Enums.hpp  vector.hpp
cpp/include/tmns/math/types/: Math_Functors.hpp  Type_Deduction.hpp
cpp/include/tmns/math/vector/: Sub_Vector.hpp  VectorN.hpp  Vector_Functors.hpp  Vector_Proxy.hpp  Vector_Traits.hpp  Vector_Transpose.hpp
cpp/src/: main.cpp
cpp/src/calc/apps/: App_Factory.cpp
cpp/src/calc/apps/calculator/: App_Calculator.cpp
cpp/src/calc/apps/editor/: App_Editor.cpp
cpp/src/calc/apps/settings/: App_Settings.cpp
cpp/src/calc/core/: Session.cpp
cpp/src/calc/drivers/: DriverRaylib.cpp  Raylib_Utilities.cpp
cpp/src/calc/image/: Frame.cpp  FrameView.cpp  Primitives.cpp
cpp/src/calc/pages/: FooterWidget.cpp  HeaderWidget.cpp  Main_Menu.cpp  Main_Window.cpp  Splash.cpp
cpp/src/calc/ui/: EventType.cpp  Label.cpp  LayoutBase.cpp  LayoutHorizontal.cpp  LayoutPrimitives.cpp  LayoutVertical.cpp  WidgetLayout.cpp
cpp/src/calc/utils/: StringUtilities.cpp
cpp/src/core/: ConfigParser.cpp  Options.cpp  Session.cpp  StringUtilities.cpp
cpp/src/driver/: DriverAllegro.cpp  DriverRaylib.cpp  Raylib_Utilities.cpp
cpp/src/drivers/: Allegro.cpp  DriverAllegro.cpp  DriverRaylib.cpp
cpp/src/drv/: DriverAllegro.cpp  DriverRaylib.cpp  Raylib_Utilities.cpp
cpp/src/gui/: Label.cpp  LayoutPrimitives.cpp  LayoutStack.cpp
cpp/src/gui/app/: App_Base.cpp
cpp/src/gui/core/: Application.cpp  ConfigParser.cpp  Options.cpp  Resource_Manager.cpp  Session.cpp
cpp/src/gui/event/: EventType.cpp
cpp/src/gui/layout/: LayoutBase.cpp  LayoutHorizontal.cpp  LayoutPrimitives.cpp  LayoutStack.cpp  LayoutVertical.cpp
cpp/src/gui/layouts/: LayoutBase.cpp  LayoutHorizontal.cpp  LayoutPrimitives.cpp  LayoutStack.cpp  LayoutVertical.cpp
cpp/src/gui/widget/: Label.cpp  WidgetBase.cpp  WidgetLayout.cpp
cpp/src/gui/widgets/: Label.cpp  WidgetLayout.cpp
cpp/src/image/: Frame.cpp  FrameView.cpp  Frame_View.cpp  Primitives.cpp
cpp/src/log/: HandlerConsole.cpp  Level.cpp  Logger.cpp
cpp/src/pages/: Splash.cpp
cpp/src/ui/: EventType.cpp  Frame.cpp  Label.cpp  LayoutBase.cpp  LayoutPrimitives.cpp  LayoutVertical.cpp
cpp/src/utils/: StringUtilities.cpp
cpp/templates/: version.hpp.in
data/: options.cfg  options.picocalc.cfg  options.py.uconsole.cfg  options.uconsole.cfg
docs/: Building-General.md  Building-uConsole.md  Design-Notes.md  Evolution.md
python/core/: session.py  splash.py
python/core/game/: core.py
python/core/game/ui/: core.py  layouts.py  window.py
python/core/ui/drivers/: pygame.py
scripts/: build-with-conan.pico.sh  build-with-conan.sh  cpp-gen-config.sh  cpp-run-app.sh
test/unit/: CMakeLists.txt  main.cpp
test/unit/calc/ui/: TEST_LayoutBase.cpp  TEST_LayoutHorizontal.cpp  TEST_LayoutVertical.cpp
tools/: cmake-build-file-list.py  cmake-check-missing-files.py
tools/pico_sdk_setup/: run.sh
(+13 files in other folders)
